# react-native-sync-format-edittext

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SyncFormatEdittext.podspec  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  FormatHostObject.cpp  FormatHostObject.h  FormatModuleJNI.cpp
docs/: prd-sync-format-edittext.md
docs/adr/: 0001-jsi-sync-format.md  0002-android-oldarch-compat.md  0003-inherit-react-edittext.md
docs/issues/: 0002-android-oldarch-compat.md  0003-downgrade-rn-081.md  001-minimal-edittext.md  002-value-controlled-prop.md  003-onchange-event.md  004-input-reversion.md  005-js-format-integration.md  006-placeholder-color.md  007-web-fallback.md  008-example-app-verification.md  009-inherit-react-edittext.md  010-codegen-spec-full-textinput-props.md  011-viewmanager-merge-inherit.md  012-js-wrapper-textinput-props.md  013-example-app-verification.md
example/: app.json  bash.exe.stackdump  package.json
example/.claude/: settings.local.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/NewSyncFormatEdittextExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: SyncFormatEdittextView.h  SyncFormatEdittextView.mm
src/: NativeFormatModule.ts  SyncFormatEdittextView.native.tsx  SyncFormatEdittextView.tsx  SyncFormatEdittextViewNativeComponent.ts  index.tsx
(+31 files in other folders)
